#21244 Fixed WhiteSpace issue in product grid
There are some whitespaces in between li tags, that's why product grid showing 3 products instead of 4 also mention in #20140

--- a/app/design/frontend/Magento/luma/Magento_Catalog/web/css/source/module/_listings.less
+++ b/app/design/frontend/Magento/luma/Magento_Catalog/web/css/source/module/_listings.less
@@ -480,6 +480,7 @@
         .products-grid {
             .product-items {
                 margin: 0;
+                font-size: 0;
             }
 
             .product-item {
